--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "svelte": "^3.49.0",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
   }
 }
