--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "alert-node": "^5.0.3",
+    "dotenv": "^16.0.2",
     "lodash": "^4.17.21",
     "ws": "^8.8.1"
   }
