--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,11 @@
     "alert-node": "^5.0.3",
     "dotenv": "^16.0.2",
     "lodash": "^4.17.21",
+    "typescript": "^4.8.3",
     "ws": "^8.8.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.184",
+    "@types/ws": "^8.5.3"
   }
 }
